@@ -1,3 +1,9 @@
+2015-06-24  Per Bothner  <per@bothner.com>
+
+	* larceny-tests/tests/scheme/process-context.sld: Larceny test.
+	* larceny-tests/run/process-context.sps: Larceny test runner.
+	* Makefile.am: New rules to run process-context tests.
+
 2015-06-23  Per Bothner  <per@bothner.com>
 
 	* inlining-test.scm: Add a test using 'dynamic'.
